k8s/pipeline-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pipeline-deployment
  namespace: usccb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pipeline
  template:
    metadata:
      labels:
        app: pipeline
    spec:
      serviceAccountName: default
      imagePullSecrets:
      - name: dockerhub-secret
      containers:
      - name: pipeline
        image: tomatl/usccb:pipeline
        imagePullPolicy: Always
        resources:
          requests:
            memory: "32Mi"
            cpu: "5m"
          limits:
            memory: "128Mi"
            cpu: "50m"
        args:
        - "--max_parishes_per_diocese"
        - "50"
        - "--num_parishes_for_schedule"
        - "100"
        volumeMounts:
        - name: tmp
          mountPath: /tmp
        - name: chrome-user-data
          mountPath: /app/.chrome-user-data
      volumes:
      - name: tmp
        emptyDir: {}
      - name: chrome-user-data
        emptyDir: {}
      restartPolicy: Always
